--- a/views/addAchievement.ejs
+++ b/views/addAchievement.ejs
@@ -18,7 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body style="max-height: 100vh; overflow-y: hidden;">
 
 
 
@@ -48,16 +48,10 @@
     </header>
 
     <main>
-        <div class="container-fluid p-0 m-0 ">
-            <div class="row p-0 m-0">
-                <div class="col-12 col-md-6">
+        <div class="container d-flex justify-content-center">
 
-                    <%- include('./forms/addAchievementForm') %>
-                </div>
-                <div class="img-container col-12 col-sm-6 mt-5 pt-5 d-none d-md-block">
-                    <img src="../img/progress.svg" class="add-img" />
-                </div>
-            </div>
+            <%- include('./forms/addAchievementForm') %>
+
         </div>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
