fixed google sign button error

--- a/views/auth/admin_signin.ejs
+++ b/views/auth/admin_signin.ejs
@@ -57,7 +57,7 @@
             </div>
         </div>
     </main>
-    <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
+    <script src="https://apis.google.com/js/platform.js?onload=renderButton" defer></script> <!-- removed async -->
     <script src="js/signin.js"></script>
     <script src="js/signout.js"></script>
     <script src="/js/validate.js"></script>
