--- a/views/auth/student_signin.ejs
+++ b/views/auth/student_signin.ejs
@@ -72,7 +72,7 @@
     </main>
 
 
-    <script src="https://apis.google.com/js/platform.js?onload=renderButton" defer></script>
+    <script src="https://apis.google.com/js/platform.js?onload=renderButton" defer></script> <!-- removed async -->
     <script src="js/signin.js"></script>
     <script src="js/signout.js"></script>
     <script src="/js/validate.js"></script>
