--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,6 +28,8 @@
             <div class="row align-items-center">
                 <div class="col-12 col-sm-6 pt-4 d-none d-md-block mt-4" style="text-align: center; padding-left: 40px;">
                     <img class="w-75 d-none d-md-block" src="https://webcampus.bmsce.in/assets/img/img15.png" />
+                    <!-- <img class="w-75 d-none d-md-block" src="../public/img/index_page_img.png" />
+                    <img src="E:/Projects/College Projects/Student_Achievements_new/public/img/index_page_img.png" /> -->
                 </div>
                 <div class="col-12 col-md-6 pt-4 p-3 p-xl-4 align-items-center mt-4">
                     <div class="row usnForm  m-1 m-lg-5 p-md-5" style="max-width:500px">
@@ -44,8 +46,7 @@
                             <button class="btn btn-outline-success btn-lg btn-block w-100" type="submit">Student sign in</button>
                         </form>
                         <form class="mt-2" action="/admin_signin" method="post" id="signInForm">
-                            <button class="btn btn-outline-danger btn-lg btn-block w-100" type="submit">Admin sign
-                                in</button>
+                            <button class="btn btn-outline-danger btn-lg btn-block w-100" type="submit">Admin sign in</button>
                         </form>
                     </div>
                 </div>
