minor ui changes after successfull deployment

--- a/views/forms/addAchievementForm.ejs
+++ b/views/forms/addAchievementForm.ejs
@@ -108,13 +108,11 @@
                             <input type="file" id="certificate" name="certificate"><br><br>
                         </div>
                         <div class="col-12 col-sm-3">
-                            <button class="submitBtn btn mt-5 " type="submit " value="Submit ">Submit</button>
+                            <button class="submitBtn btn btn-contained mt-5 btn-block" style="float: right;background-color: #30398C; color: white;" type="submit " value="Submit ">Submit</button>
                         </div>
                     </div>
 
                 </div>
-
-
 </form>
 <script>
 </script>
