--- a/views/getUserDetails.ejs
+++ b/views/getUserDetails.ejs
@@ -40,7 +40,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-sm-6 pt-5 d-none d-md-block mt-5" style="text-align: center; padding-left: 40px;">
-                    <img class="w-75 d-none d-md-block" src="https://webcampus.bmsce.in/assets/img/img15.png" />
+                    <img class="w-75 d-none d-md-block" src="img/index_page_img.png" />
                 </div>
                 <div class="col-12 col-md-6 pt-5 p-2 p-md-5 ">
                     <%- include('./forms/userDetailForm.ejs') %>
