--- a/views/forms/adminForm.ejs
+++ b/views/forms/adminForm.ejs
@@ -10,7 +10,7 @@
                                 <div class="row">
                                     <label for="selected_departments" class="form-label">Choose the departments<span style="font-style:italic; font-size:10px;color:gray;"><br/>(Multiple selection available)</span> </label>
                                 </div>
-                                <div class="row ">
+                                <div class="row" style="margin-left: -0.2rem;">
                                     <select class="department-select mul-select p-0" multiple="true" name="selected_departments" id="mul-select" required>
                                     <% for(var i = 0; i < departments.length; ++i) { %>
                                         <option  value="<%=departments[i]%>"><%=departments[i]%></option>
@@ -22,19 +22,19 @@
 
                         <div class="row">
                             <div class="btn-group-toggle" data-toggle="buttons">
-                                <label class="btn btn-outline-success active btn-sm">
+                                <label class="btn btn-outline-success  btn-sm">
                               <input type="checkbox" id="select-all"> Select All
                             </label>
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-3">
+                    <div class="col-12 col-md-6 col-lg-3 batch">
                         <div class="row pl-3">
                             <div class="form-group container-fluid">
                                 <div class="row">
                                     <label for="selected_batches" class="form-label">Choose the batch<span style="font-style:italic; font-size:10px;color:gray;"><br/>(Multiple selection available)</span> </label>
                                 </div>
-                                <div class="row">
+                                <div class="row" style="margin-left:-0.2rem;">
                                     <select class="batch-select mul-select" multiple="true" name="selected_batches" required>
                                         <% for(let batch in all_batches) { %>
                                             <option  value="<%=all_batches[batch]%>"><%=all_batches[batch]%></option>
@@ -43,7 +43,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row pl-3">
                             <div class="btn-group-toggle" data-toggle="buttons">
                                 <label class="btn btn-outline-success btn-sm">
                         <input type="checkbox" id="select-batch-all"> Select All
@@ -74,15 +74,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-3 mt-1">
-                        <button class="submitBtn btn mt-1 mt-md-5 " type="submit" value="Submit">View Student Achievement</button>
+                    <div class="col-12 col-md-6 col-lg-3 mt-2">
+                        <button class=" submitBtn btn mt-1 mt-md-5 py-1 " style="margin-top: 5.5rem;" type="submit " value="Submit ">View Student Achievement</button>
                     </div>
                 </div>
             </form>
         </div>
         <div class="col-12 col-md-1 align-items-center ">
-            <form method="post" action="/download" id="download">
-                <input type="hidden" name="userData" id="userData" value="<%=JSON.stringify(userData)%>" />
+            <form method="post " action="/download " id="download ">
+                <input type="hidden" name="userData" id="userData " value="<%=JSON.stringify(userData)%>" />
                 <input type="hidden" name="data" value="<%=JSON.stringify(data)%>" />
                 <div class="form-group">
                     <div onclick="submitForm();">
