--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,26 +27,25 @@
         <div class="container-fluid">
             <div class="row align-items-center">
                 <div class="col-12 col-sm-6 pt-4 d-none d-md-block mt-4" style="text-align: center; padding-left: 40px;">
-                    <img class="w-75 d-none d-md-block" src="https://webcampus.bmsce.in/assets/img/img15.png" />
-                    <!-- <img class="w-75 d-none d-md-block" src="../public/img/index_page_img.png" />
-                    <img src="E:/Projects/College Projects/Student_Achievements_new/public/img/index_page_img.png" /> -->
+
+                    <img class="w-75 d-none d-md-block" src="img/index_page_img.png " />
                 </div>
-                <div class="col-12 col-md-6 pt-4 p-3 p-xl-4 align-items-center mt-4">
-                    <div class="row usnForm  m-1 m-lg-5 p-md-5" style="max-width:500px">
-                        <h4 class="text-left">Student Achievement</h4>
+                <div class="col-12 col-md-6 pt-4 p-3 p-xl-4 align-items-center mt-4 ">
+                    <div class="row usnForm m-1 m-lg-5 p-md-5 " style="max-width:500px ">
+                        <h4 class="text-left ">Student Achievement</h4>
                         <p>One stop destination to save all you Achievements</p>
-                        <div style="color:red;">
+                        <div style="color:red; ">
                             <%= error %>
                         </div>
-                        <form class="mt-2" action="/student_signup" method="post" id="signInForm">
-                            <button class="btn btn-outline-primary btn-lg btn-block w-100" type="submit">Student sign
+                        <form class="mt-2 " action="/student_signup" method="post" id="signInForm ">
+                            <button class="btn btn-outline-primary btn-lg btn-block w-100 " type="submit ">Student sign
                                 up</button>
                         </form>
-                        <form class="mt-2" action="/student_signin" method="post" id="signInForm">
-                            <button class="btn btn-outline-success btn-lg btn-block w-100" type="submit">Student sign in</button>
+                        <form class="mt-2 " action="/student_signin" method="post" id="signInForm ">
+                            <button class="btn btn-outline-success btn-lg btn-block w-100 " type="submit ">Student sign in</button>
                         </form>
-                        <form class="mt-2" action="/admin_signin" method="post" id="signInForm">
-                            <button class="btn btn-outline-danger btn-lg btn-block w-100" type="submit">Admin sign in</button>
+                        <form class="mt-2 " action="/admin_signin" method="post" id="signInForm ">
+                            <button class="btn btn-outline-danger btn-lg btn-block w-100 " type="submit ">Admin sign in</button>
                         </form>
                     </div>
                 </div>
@@ -54,8 +53,8 @@
         </div>
     </main>
 
-    <script src="js/signin.js"></script>
-    <script src="js/signout.js"></script>
+    <script src="js/signin.js "></script>
+    <script src="js/signout.js "></script>
 </body>
 
 </html>
