minor ui changes after successfull deployment

--- a/views/createBatches.ejs
+++ b/views/createBatches.ejs
@@ -51,7 +51,7 @@
 
     <main>
         <%- include('./forms/createBatchesForm') %>
-            <div class="container-fluid  justify-content-left table-responsive  mt-5 d-none d-md-block">
+            <div class="container-fluid  justify-content-left table-responsive  mt-5 ">
                 <table class="table" style="max-width: 500px;">
                     <thead>
                         <tr>
