--- a/views/viewAchievements.ejs
+++ b/views/viewAchievements.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>
-        Student Achievements
-    </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Student Achievement</title>
     <!-- Google API -->
     <meta name="google-signin-client_id" content="272476288648-km8fne9ac14oek1rod26m9f9d4hrr8fo.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
@@ -64,29 +64,29 @@
                             if(!achievements[achievement]) { continue; } 
 
                             for(var i=0; i < achievements[achievement].length; ++i) { %>
-                                    <tr>
-                                        <th scope="row" class="d-none d-lg-block">
-                                            <%=count%>
-                                        </th>
-                                        <td>
-                                            <%=achievement%>
-                                        </td>
-                                        <td class="d-none d-lg-block">
-                                            <%=achievements[achievement][i][3]%>
-                                        </td>
-                                        <td>
-                                            <%=achievements[achievement][i][4]%>
-                                        </td>
-                                        <td>
-                                            <%=achievements[achievement][i][5]%>
-                                        </td>
-                                        <td>
-                                            <%=achievements[achievement][i][6]%>
-                                        </td>
-                                    </tr>
-                                    <% count +=1 %>
-                                        <% } %>
-                                            <% } %>
+                            <tr>
+                                <th scope="row" class="d-none d-lg-block">
+                                    <%=count%>
+                                </th>
+                                <td>
+                                    <%=achievement%>
+                                </td>
+                                <td class="d-none d-lg-block">
+                                    <%=achievements[achievement][i][3]%>
+                                </td>
+                                <td>
+                                    <%=achievements[achievement][i][4]%>
+                                </td>
+                                <td>
+                                    <%=achievements[achievement][i][5]%>
+                                </td>
+                                <td>
+                                    <%=achievements[achievement][i][6]%>
+                                </td>
+                            </tr>
+                            <% count +=1 %>
+                                <% } %>
+                                    <% } %>
                 </tbody>
             </table>
         </div>
