--- a/views/auth/student_signup.ejs
+++ b/views/auth/student_signup.ejs
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>
-        Student Achievements
-    </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Student Achievement</title>
     <!-- Google API -->
     <meta name="google-signin-client_id" content="272476288648-km8fne9ac14oek1rod26m9f9d4hrr8fo.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <!-- CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="../style/navbar.css" rel="stylesheet" media="all">
     <link href="../style/form.css" rel="stylesheet" media="all">
@@ -20,20 +22,26 @@
 
 <body>
     <header>
-        <nav class="navbar">
-            <div class="container">
-                <span class="navbar-brand mb-0 h1">Student Achievement</span>
-                <div class="d-flex flex-row ">
-                    <a href="/" onclick="signOut();" class="signOut mx-2" id="signout">Sign out</a>
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
+            <span class="navbar-brand mb-0 h1" style=" color: #30398C;">Student Achievement</span> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse text-align-right" id="navbarTogglerDemo02">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0" id="navbarTogglerDemo03">
+                </ul>
+                <div class="text-align-right">
+                    <a class="nav-link  signOut mx-2" href="/" onclick="signOut();" id="signout">Sign Out</a>
                 </div>
+
             </div>
         </nav>
     </header>
 
     <main>
-        <div class="container-fluid  mt-3 pt-1">
+        <div class="container-fluid  mt-1  mt-md-2 pt-md-1">
             <div class="row d-flex align-items-center justify-content-center">
-                <div class="col-12 col-md-6 pt-5 p-5 text-center d-flex align-items-center justify-content-center">
+                <div class="col-12 col-md-6 pt-5 p-md-5 text-center d-flex align-items-center justify-content-center">
                     <form class="usnForm d-flex flex-column align-items-center justify-content-center" action="/getUserDetails" method="post" id="signInForm">
                         <h1 id="display_sign_in" class="text-left">Sign in with Google</h1>
                         <div class="d-flex flex-column align-items-center justify-content-center" class="display_signin_info">
@@ -55,8 +63,11 @@
             </div>
         </div>
     </main>
-
-    <script src="https://apis.google.com/js/platform.js?onload=renderButton" defer></script> <!-- removed async -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://apis.google.com/js/platform.js?onload=renderButton" defer></script>
+    <!-- removed async -->
     <script src="js/signin.js"></script>
     <script src="js/signout.js"></script>
     <script src="/js/validate.js"></script>
