--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <title>
-        Student Achievements
-    </title>
-     <!-- Google API -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Student Achievement</title>
+    <!-- Google API -->
     <meta name="google-signin-client_id" content="272476288648-km8fne9ac14oek1rod26m9f9d4hrr8fo.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://apis.google.com/js/client:platform.js?onload=init" async defer></script>
@@ -16,38 +17,40 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
-    <body>
-        <header>
-            <nav class="navbar">
-                <div class="container">
-                  <span class="navbar-brand mb-0 h1">Student Achievement</span>
-                  <div class="d-flex flex-row ">
-                      <a href="/" onclick="signOut();" id="signOut" class="signOut mx-2" >Sign out</a>
-                  </div>
-                </div>
-              </nav>
-        </header>
-        
-        <main>
-            <div class="container-fluid  mt-5 pt-3">
-                <div class="row d-flex align-items-center justify-content-center">
-                    <div class="col-12 col-md-6 pt-5 p-5 text-center d-flex align-items-center justify-content-center">
-                        <span class="badge badge-success">Registration Successfull</span>
-                        <form class="" action="/addAchievement" method="post" id="register">      
-                        </form>
-                    </div>
+
+<body>
+    <header>
+        <nav class="navbar">
+            <div class="container">
+                <span class="navbar-brand mb-0 h1">Student Achievement</span>
+                <div class="d-flex flex-row ">
+                    <a href="/" onclick="signOut();" id="signOut" class="signOut mx-2">Sign out</a>
                 </div>
             </div>
-        </main>
-       
-        <script>
+        </nav>
+    </header>
+
+    <main>
+        <div class="container-fluid  mt-5 pt-3">
+            <div class="row d-flex align-items-center justify-content-center">
+                <div class="col-12 col-md-6 pt-5 p-5 text-center d-flex align-items-center justify-content-center">
+                    <span class="badge badge-success">Registration Successfull</span>
+                    <form class="" action="/addAchievement" method="post" id="register">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <script>
         window.addEventListener('load', (event) => {
-         document.getElementById("register").submit()
+            document.getElementById("register").submit()
         });
-        </script>
-        <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
-        <script src="js/signin.js"></script>
-        <script src="js/signout.js"></script>
-        <script src="/js/validate.js"></script>
-    </body>
+    </script>
+    <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
+    <script src="js/signin.js"></script>
+    <script src="js/signout.js"></script>
+    <script src="/js/validate.js"></script>
+</body>
+
 </html>
