frontend changes after deployment

--- a/public/style/form.css
+++ b/public/style/form.css
@@ -62,6 +62,7 @@ td {
 @media screen and (max-width:576px) {
     .usnForm {
         padding: 3rem 1rem;
+        min-width: 90%;
     }
     .batch {
         padding: 0;
