--- a/views/addAchievement.ejs
+++ b/views/addAchievement.ejs
@@ -37,7 +37,7 @@
 
                     <form method="post" action="/viewAchievements">
                         <input type="hidden" name="userData" id="userData" value="<%=JSON.stringify(userData)%>" />
-                        <button class="nav-link add-achievement" style="color: green; margin-right: 1rem;" type="submit">View
+                        <button class="nav-link add-achievement" style="color: green;" type="submit">View
                     Achievements </button>
                     </form>
                     <a class="nav-link signOut mx-2" href="/" onclick="signOut();" id="signOut">Sign Out</a>
