frontpage image change

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
             <div class="row align-items-center">
                 <div class="col-12 col-sm-6 pt-4 d-none d-md-block mt-4" style="text-align: center; padding-left: 40px;">
 
-                    <img class="w-75 d-none d-md-block" src="img/index_page_img.png " />
+                    <img class="w-75 d-none d-md-block" src="img/winners.svg " />
                 </div>
                 <div class="col-12 col-md-6 pt-4 p-3 p-xl-4 align-items-center mt-4 ">
                     <div class="row usnForm m-1 m-lg-5 p-md-5 " style="max-width:500px ">
