--- a/views/forms/addAchievementForm.ejs
+++ b/views/forms/addAchievementForm.ejs
@@ -103,12 +103,12 @@
 
 
                     <div class="row d-flex justify-content-between">
-                        <div class="col-12 col-sm-3 mt-3">
+                        <div class="col-12 col-sm-3 mt-1 mt-md-3">
                             <label for="certificate">Select a file:</label>
                             <input type="file" id="certificate" name="certificate"><br><br>
                         </div>
                         <div class="col-12 col-sm-3">
-                            <button class="submitBtn btn btn-contained mt-5 btn-block" style="float: right;background-color: #30398C; color: white;" type="submit " value="Submit ">Submit</button>
+                            <button class="submitBtn btn btn-contained mt-2 mt-md-5 btn-block" style="float: right;background-color: #30398C; color: white;" type="submit " value="Submit ">Submit</button>
                         </div>
                     </div>
 
