--- a/views/addAchievement.ejs
+++ b/views/addAchievement.ejs
@@ -16,6 +16,30 @@
     <link href="../style/feed.css" rel="stylesheet" media="all">
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <style>
+        .spinner {
+            opacity: 0;
+            display: none;
+            width: 20px;
+            height: 10px;
+            -webkit-transition: opacity 0.25s, max-width 0.45s;
+            -moz-transition: opacity 0.25s, max-width 0.45s;
+            -o-transition: opacity 0.25s, max-width 0.45s;
+            transition: opacity 0.25s, max-width 0.45s;
+            /* Duration fixed since we animate additional hidden width */
+        }
+        
+        .has-spinner.active {
+            cursor: progress;
+        }
+        
+        .has-spinner.active .spinner {
+            display: inline-block;
+            opacity: 1;
+            max-width: 50px;
+            /* More than it will ever come, notice that this affects on animation duration */
+        }
+    </style>
 </head>
 
 <body class="body">
