--- a/views/forms/addAchievementForm.ejs
+++ b/views/forms/addAchievementForm.ejs
@@ -1,6 +1,6 @@
 <form class=" feedForm row needs-validation" novalidate id="feedForm" action="/updating_achievement" method="post" enctype="multipart/form-data">
     <% if(is_achievement_updated==true) { %>
-        <div class="alert alert-success">
+        <div class="alert alert-success" style="max-width: 100%;">
             <strong>Congratulations!</strong> Achievement Added Successfully
         </div>
         <script type="text/javascript">
@@ -108,11 +108,12 @@
                             <input type="file" id="certificate" name="certificate"><br><br>
                         </div>
                         <div class="col-12 col-sm-3">
-                            <button class="submitBtn btn btn-contained mt-2 mt-md-5 btn-block" style="float: right;background-color: #30398C; color: white;" type="submit " value="Submit ">Submit</button>
+                            <button id="submitbutton" class="submitBtn btn btn-contained mt-2 mt-md-5 btn-block has-spinner" style="float: right;background-color: #30398C; color: white;" type="submit " value="Submit "><span class="spinner"><img src="/img/ss.svg" width="30" height="30" style="margin-left: -1rem;"></span>Submit</button>
                         </div>
+
                     </div>
 
                 </div>
 </form>
-<script>
-</script>
+
+<script src="js/disable_submit_button.js"></script>
