--- a/views/forms/adminForm.ejs
+++ b/views/forms/adminForm.ejs
@@ -5,7 +5,7 @@
                 <input type="hidden" name="userData" id="userData" value="<%=JSON.stringify(userData)%>" />
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-3 ">
-                        <div class="row">
+                        <div class="row" style="max-width: 105%;">
                             <div class="form-group container-fluid">
                                 <div class="row">
                                     <label for="selected_departments" class="form-label">Choose the departments<span style="font-style:italic; font-size:10px;color:gray;"><br/>(Multiple selection available)</span> </label>
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-3 batch">
-                        <div class="row pl-3">
+                        <div class="row pl-3" style="max-width:100%;">
                             <div class="form-group container-fluid">
                                 <div class="row">
                                     <label for="selected_batches" class="form-label">Choose the batch<span style="font-style:italic; font-size:10px;color:gray;"><br/>(Multiple selection available)</span> </label>
