fixed download issue

--- a/views/forms/adminForm.ejs
+++ b/views/forms/adminForm.ejs
@@ -101,4 +101,7 @@
     $('#adminForm').submit(function() {
         $(this).find('#submitbutton1').prop('disabled', true);
     });
+    function submitForm() {
+        document.getElementById("download").submit();
+    }
 </script>
