removed comments and added temp accept only pdf option

--- a/views/forms/addAchievementForm.ejs
+++ b/views/forms/addAchievementForm.ejs
@@ -104,8 +104,8 @@
 
                     <div class="row d-flex justify-content-between">
                         <div class="col-12 col-sm-3 mt-1 mt-md-3">
-                            <label for="certificate">Add Certificate : *optional*</label>
-                            <input type="file" id="certificate" name="certificate"><br><br>
+                            <label for="certificate">Add Certificate : *optional pdf < 5 MB*</label>
+                            <input type="file" id="certificate" name="certificate" accept="application/pdf"><br><br>
                         </div>
                         <div class="col-12 col-sm-3">
                             <button id="submitbutton" class="submitBtn btn btn-contained mt-2 mt-md-5 btn-block has-spinner" style="float: right;background-color: #30398C; color: white;" type="submit " value="Submit "><span class="spinner"><img src="/img/ss.svg" width="30" height="30" style="margin-left: -1rem;"></span>Submit</button>
