--- a/public/style/form.css
+++ b/public/style/form.css
@@ -57,6 +57,10 @@ td {
     i {
         margin-left: 1rem;
     }
+    .batch {
+        padding: 0;
+        margin-top: 1rem;
+    }
 }
 
 @media screen and (max-width:576px) {
