--- a/views/forms/addAchievementForm.ejs
+++ b/views/forms/addAchievementForm.ejs
@@ -20,7 +20,7 @@
                 <h4 class="text-left">Enter the following details</h4>
                 <div class="container">
                     <div class="row">
-                        <div class="col-12 col-sm-6 mt-3">
+                        <div class="col-12 col-lg-6 mt-3">
                             <label for="year" class="form-label">Select The Year of Achievement</label>
                             <select name="year" class="form-select" required>
                                         <option value="">--Select the Year of Achievement--</option>
@@ -34,7 +34,7 @@
                                 Year Cannot be Empty
                             </div>
                         </div>
-                        <div class="col-12 col-sm-6  mt-3">
+                        <div class="col-12 col-lg-6  mt-3">
                             <label for="nameOfEvent" class="form-label">Select The Event Type</label>
                             <select name="nameOfEvent" class="form-select" required id="nameOfEvent">
                                         <option value="">--Select The Event Type--</option>
