submit button responsive

--- a/views/forms/createBatchesForm.ejs
+++ b/views/forms/createBatchesForm.ejs
@@ -1,30 +1,28 @@
 <form class="container bg-light text-dark m-0 adminform" id="createBatch" action="/createBatches" method="post">
     <input type="hidden" name="userData" id="userData" value="<%=JSON.stringify(userData)%>" />
     <div class="row mt-3">
-        <div class="col-4">
+        <div class="col-12 col-md-3">
             <div class="form-group">
                 <label for="selected_departments" class="form-label">Choose the Batch </label>
                 <select name="batch_year" class="form-select" id="batch_year" required>
-                    <option value="NaN">--Select a batch--</option>
-                        <% let year = new Date().getFullYear();
-                        var batches_set = new Set(all_batches);
-                        for(var i = 2018; i <= year; ++i) {
-                             var batch=`batch-${i}-${i+4}`; 
-                                if(!batches_set.has(batch)){ %>
-                                    <option  value="<%=i%>"><%=i%></option>
-                            <% }
-                        }%>
-                </select>
+                        <option value="NaN">--Select a batch--</option>
+                            <% let year = new Date().getFullYear();
+                            var batches_set = new Set(all_batches);
+                            for(var i = 2018; i <= year; ++i) {
+                                var batch=`batch-${i}-${i+4}`; 
+                                    if(!batches_set.has(batch)){ %>
+                                        <option  value="<%=i%>"><%=i%></option>
+                                <% }
+                            }%>
+                        </select>
             </div>
         </div>
-
-        <div class="col-2 mt-3">
+        <div class="col-12 col-md-3 mt-3">
             <button id="submitbutton2" class="submitBtn btn btn-contained mt-1 mt-md-3 btn-block has-spinner" style="float: right;background-color: #30398C; color: white;" type="submit " value="Submit "><span class="spinner"><img src="/img/ss.svg" width="30" height="30" style="margin-left: -1rem;"></span>Submit</button>
         </div>
     </div>
-
-
 </form>
+
 <script>
     $('#createBatch').submit(function() {
         $(this).find('#submitbutton2').prop('disabled', true);
